--- a/app/public/home.html
+++ b/app/public/home.html
@@ -29,11 +29,12 @@
             <div class="card" style="width: 18rem;"></div>
             <div class="col-sm-6">
                 <a href="survey.html" class="btn btn-primary">Go to Survey!</a>
-                <img class="card-img-top" src="./Images/FARM3.jpg" alt="Card image cap">
+                <img class="card-img-top" src="./assets/Images/FARM3.jpg" alt="Card image cap">
                 <div class="card-body">
                 </div>
               </div>
-              </div>
+         </div>
+      </div>
     
     <!-- JavaScript -->
     <script src="htmlRoutes.js"></script>
