--- a/app/public/home.html
+++ b/app/public/home.html
@@ -6,11 +6,13 @@
 
        <!-- Bootstrap  & jQuery & Stylesheets-->
        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-       <link rel="stylesheet" type="text/css" href="./css/style.css">
-       <link rel="stylesheet" type="text/css" href="./css/reset.css">
+       <link rel="stylesheet" type="text/css" href="/assets/css/style.css">
+       <link rel="stylesheet" type="text/css" href="/assets/css/reset.css">
        <link href="https://fonts.googleapis.com/css?family=Arima+Madurai|Noto+Serif" rel="stylesheet">
        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+       <script src="https://code.jquery.com/jquery.js"></script>
+       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
 
  <head>
   <body>
@@ -23,13 +25,14 @@
         <h3 class="text-left" style="font-family: 'Arima Madurai', cursive;" >Answer a few basic questions.</h3>
         <h3 class="text-left"  style="font-family: 'Arima Madurai', cursive;" >Then find the friend with the greatest compatibility!</h3>
       </div>
-      <div class="row">
+
+      <div class="row" id="pic">
         <div class="col-lg-12">
       
             <div class="card" style="width: 18rem;"></div>
             <div class="col-sm-6">
-                <a href="survey.html" class="btn btn-primary">Go to Survey!</a>
-                <img class="card-img-top" src="./assets/Images/FARM3.jpg" alt="Card image cap">
+                <a href="/survey" class="btn btn-primary">Go to Survey!</a>
+                <!-- <img class="card-img-top" src="assets/Images/FARM3.jpg" alt="Card image cap"> -->
                 <div class="card-body">
                 </div>
               </div>
@@ -37,6 +40,6 @@
       </div>
     
     <!-- JavaScript -->
-    <script src="htmlRoutes.js"></script>
+    <!-- <script src="htmlRoutes.js"></script> -->
   </body>
 </html>
